<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="steelcheck.net.steelcheck.HomeActivity"
    tools:showIn="@layout/app_bar_sobre"
    android:background="#cfcfcf"
    android:gravity="center"
    android:clickable="false">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/exclusividade_titulo"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorActionBar"
                android:textStyle="bold"
                android:textSize="30dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Website"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:linksClickable="false"
                android:textSize="20dp"
                android:textColor="@color/primary_material_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/sc_website"
                android:id="@+id/link_website_id"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:linksClickable="false"
                android:textColor="#71afff"
                android:textColorLink="#62bdff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Aplicação Android"
                android:id="@+id/textView6"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/textView8"
                android:textColor="@color/primary_material_dark"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sc_criador2"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="13dp"
                android:background="@color/button_material_dark"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/exclusividade"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="13dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:background="@color/button_material_dark"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Criadores"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView7"
                android:textColor="@color/colorActionBar"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sc_criador1"
                android:id="@+id/textView8"
                android:layout_below="@+id/link_website_id"
                android:layout_marginTop="13dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:background="@color/button_material_dark"
                android:padding="10dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
